--- a/Annalise/templates/treeIdentifier.html
+++ b/Annalise/templates/treeIdentifier.html
@@ -1,23 +1,11 @@
 <!-- filepath: templates/treeIdentifier.html-->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Virginia Common Trees Identifier</title>
-</head>
+<html>
 <body>
-    <header>
-        <h1>Virginia Trees!</h1>
-    </header>
-
-    <section>
-        <h2>{{message}}</h2>
-        <p>This is a paragraph about me.</p>
-    </section>
-
-    <footer>
-        <p>Made with 💻 by Me</p>
-    </footer>
+  <h1>Tree Identifier App</h1>
+  <form method="post">
+    Leaf Type: <input name="leaf_type"><br>
+    <input type="submit" value="Identify">
+  </form>
 </body>
 </html>
