--- a/Annalise/templates/treeIdentifier.html
+++ b/Annalise/templates/treeIdentifier.html
@@ -60,13 +60,13 @@
         {% endfor %}
         </ul>
     {% endif %} 
-    {% if matches %}
+    <!-- {% if matches %}
         <h2>Possible Matches:</h2>
         <ul>
         {% for name, score in matches %}
             <li>{{ name }} (score: {{ score }})</li>
         {% endfor %}
         </ul>
-    {% endif %}
+    {% endif %} -->
 </body>
 </html>
