--- a/Annalise/templates/treeIdentifier.html
+++ b/Annalise/templates/treeIdentifier.html
@@ -65,5 +65,8 @@
         <h2>Description:</h2>
         <p>{{ description }}</p>
     {% endif %}
+<footer>
+    <p>Powered by Tree Identifier</p>
+</footer>
 </body>
 </html>
