--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,11 @@
 <head>
     <title>{% block title %}Tree Identifier{% endblock %}</title>
     <style>
+        html, body {
+            width: 100vw;
+            max-width: 100vw;
+            overflow-x: hidden;
+        }
         body {
             font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
             background-color: #c2e9e5;
