added identified list

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,6 +95,17 @@
             margin-top: 40px;
             text-align: center;
         }
+        .tree-image-row {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            align-items: flex-start;
+            flex-wrap: wrap;
+            border:#c2e9e5;
+        }
+        .no-border {
+            border: none;
+        }
     @media (max-width: 600px) {
     body {
         padding: 5px;
