Fully working web page

--- a/templates/base.html
+++ b/templates/base.html
@@ -106,6 +106,15 @@
         .no-border {
             border: none;
         }
+        .inline-form {
+            background: none !important;
+            padding: 0 !important;
+            border-radius: 0 !important;
+            max-width: none !important;
+            margin: 0 !important;
+            box-shadow: none !important;
+            display: inline;
+        }
     @media (max-width: 600px) {
     body {
         padding: 5px;
