--- a/templates/tree_data.html
+++ b/templates/tree_data.html
@@ -57,5 +57,8 @@
     <a href="{{ url_for('browse') }}">
         <button type="button">Back to Browse</button>
     </a>
+    <a href="{{ url_for('treeIdentifier') }}" style="margin-left:10px;">
+        <button type="button">Back to Identify</button>
+    </a>
 {% endblock %}
 </html>
